--- a/30.9/index.html
+++ b/30.9/index.html
@@ -21,6 +21,7 @@
           is eu tortor porttitor accumsan. Vestibulum erat nulla, ullamcorper nec, rutrum non, nonummy ac, erat. Integ
           er lacinia. Aliquam erat volutpat.</p>
           <a href="ssps.cz">ssps</a>
-          <img src="">
+          <br>
+          <img src="http://mimo.app/i/earth.png">
 </body>
 </html>
