--- a/30.9/index.html
+++ b/30.9/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>nadpis1</h1>
     <h2>nadpis2</h2>
@@ -14,14 +16,18 @@
     <h5>nadpis5</h5>
     <h6>nadpis6</h6>
     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam neque. Nullam lectus justo, vulputate eget
-         mollis sed, tempor sed magna. Nunc dapibus tortor vel mi dapibus sollicitudin. Integer malesuada. Maecenas
-          libero. Nulla pulvinar eleifend sem. Integer vulputate sem a nibh rutrum consequat. Integer malesuada. Ali
-          quam id dolor. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id q
-          uod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Praesent in maur
-          is eu tortor porttitor accumsan. Vestibulum erat nulla, ullamcorper nec, rutrum non, nonummy ac, erat. Integ
-          er lacinia. Aliquam erat volutpat.</p>
-          <a href="ssps.cz">ssps</a>
-          <br>
-          <img src="http://mimo.app/i/earth.png">
+        mollis sed, tempor sed magna. Nunc dapibus tortor vel mi dapibus sollicitudin. Integer malesuada. Maecenas
+        libero. Nulla pulvinar eleifend sem. Integer vulputate sem a nibh rutrum consequat. Integer malesuada. Ali
+        quam id dolor. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id q
+        uod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Praesent in maur
+        is eu tortor porttitor accumsan. Vestibulum erat nulla, ullamcorper nec, rutrum non, nonummy ac, erat. Integ
+        er lacinia. Aliquam erat volutpat.</p>
+    <a href="ssps.cz">ssps</a>
+    <br>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt magni vero totam quisquam fugiat earum
+        doloribus asperiores placeat odit veritatis! Vitae molestiae qui, blanditiis placeat aliquid error similique
+        sapiente? Iure!</p>
+    <img src="http://mimo.app/i/earth.png">
 </body>
+
 </html>
