--- a/30.9/index.html
+++ b/30.9/index.html
@@ -6,6 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1 {
+            color:rgb(0, 0, 255);
+            font-size: 50px;
+        }
+    </style>
 </head>
 
 <body>
