--- a/galerie/index.html
+++ b/galerie/index.html
@@ -7,14 +7,34 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="Ford Mustang.jpg" alt="">
-    <img src="Honda CBR.jpg" alt="">
-    <img src="Koenigsegg One_1.jpg" alt="">
-    <img src="pexels-diogo-cacito-13038497.jpg" alt="">
-    <img src="pexels-pixabay-207555.jpg" alt="">
-    <img src="pexels-pixabay-39693.jpg" alt="">
-    <img src="pexels-swapnil-sharma-5875951.jpg" alt="">
-    <img src="porsche.jpg" alt="">
-    <img src="Yamaha R1.jpg" alt="">
+    <div class="grid">
+        <div>
+            <img src="Ford Mustang.jpg" alt="">
+        </div>
+        <div >
+            <img src="Honda CBR.jpg" alt="">
+        </div>
+        <div>
+            <img src="Koenigsegg One_1.jpg" alt="">
+        </div>
+        <div>
+            <img src="pexels-diogo-cacito-13038497.jpg" alt="">
+        </div>
+        <div>
+            <img src="pexels-pixabay-207555.jpg" alt="">
+        </div>
+        <div>
+            <img src="pexels-pixabay-39693.jpg" alt="">
+        </div>
+        <div>
+            <img src="pexels-swapnil-sharma-5875951.jpg" alt="">
+        </div>
+        <div>
+            <img src="porsche.jpg" alt="">
+        </div>
+        <div>
+            <img src="Yamaha R1.jpg" alt="">
+        </div>
+    </div>
 </body>
 </html>
